--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,15 @@
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
-
+html {
+  background: rgb(2 6 23);
+  overflow: hidden;
+}
+#root {
+  width: 100vw;
+  height: 100vh;
+  background: rgb(2 6 23);
+}
 *,
 ::before,
 ::after {
